--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,15 @@
 }
 
 body {
-	background-color: rgb(63, 70, 83);
+	background-color: #4F528F;
 	color: white;
 	font-family: tahoma;
 	margin: 0;
 	text-align: center;
+}
+
+h1 {
+	font-weight: 300;
 }
 
 img {
@@ -26,7 +30,7 @@ ul {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: rgb(85, 93, 109);
+	background-color: #32355C;
 }
 
 li {
